<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" app:cardCornerRadius="10dp" android:layout_margin="10dp"
        app:cardElevation="10dp" android:id="@+id/card_event">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" android:padding="2dp">

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.36"/>
        <TextView
                android:id="@+id/txt_title_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_field"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>
        <TextView
                android:id="@+id/txt_address_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_field"
                app:layout_constraintTop_toBottomOf="@+id/txt_title_event"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>
        <TextView
                android:id="@+id/txt_date_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_field"
                app:layout_constraintTop_toBottomOf="@+id/txt_address_event"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>
        <TextView
                android:text="@string/read_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_read_more"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_date_event"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:background="#FFFFFF"
                android:elevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0" android:textColor="#03A9F4" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline_left_edge"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.25"/>

        <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:cropToPadding="true"
                android:scaleType="fitCenter"
                android:layout_marginEnd="8dp"
                android:adjustViewBounds="true"
                android:id="@+id/img_icon_event"
                tools:srcCompat="@drawable/event_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/guideline"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>