<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.home.HomeFragment" android:id="@+id/contraint_home">

    <ImageView
            android:id="@+id/home_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/home"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="background_logo"/>

    <ImageView
            android:src="@drawable/logo_home"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/logo_startup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_start_logo"
            app:layout_constraintBottom_toTopOf="@+id/guideline_end_logo"
            android:contentDescription="logo_startup"/>

    <TextView
            android:text="@string/title_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/txt_tittle_event"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline_end_logo" android:textColor="@color/white"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline_start_logo"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline_end_logo"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.65"/>
    <TextView
            android:text="@string/date_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_date_event"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_tittle_event"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textColor="@color/white"/>
    <Button
            android:text="@string/get_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_get_entry"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_date_event"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:textColor="@color/white"
            android:backgroundTint="@color/getEntryColorButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>